# TheiaSfM

./: CMakeLists.txt
applications/: CMakeLists.txt  build_reconstruction.cc  colmapDB_to_theia_matchfile.cc  compare_input_matchfile_and_intermediate_result.cc  compute_matching_relative_pose_errors.cc  export_theia_matched_image_pairs_from_theia_output_matchfile.cc  generate_theia_matchfile_from_colmap_relativeRt.cc  read_DeMoN_JohanMatches_to_theia_output_matchfile.cc  read_DeMoN_prediction_hdf5_to_theia_output_matchfile.cc  read_DeMoN_prediction_hdf5_to_theia_output_matchfile_WeightedMotionAveraging.cc  read_DeMoN_relativeRt_JohanMatches_to_theia_output_matchfile.cc  read_DeMoN_relativeRt_to_theia_output_matchfile.cc  read_colmap_DB_content.cc  read_colmap_DB_content_withRt.cc  read_colmap_DB_content_withRt_EmptyMatches.cc  read_colmap_DB_content_withRt_LargeSizeIntFromFloatingPixel.cc  read_colmap_DB_content_withRt_floatingPixel.cc  read_colmap_relativeRt_to_theia_output_matchfile.cc  read_data_from_raw_matchfile_and_RANSAC_to_matchfile.cc  read_data_from_raw_matchfile_and_find_inliers_from_given_relative_poses.cc  read_data_from_theia_output_matchfile_DEBUG.cc  read_standard_colmap_DB_content.cc  read_standard_colmap_DB_content_kpCols4.cc  read_standard_colmap_DB_content_withOptimizedCameras.cc  read_theia_output_to_matchfile.cc  remove_missing_pairs_based_on_reading_DeMoN_relativeRt_to_theia_output_matchfile.cc  test.cc  theia_output_matchfile_randomly_drop_viewgraph_edges.cc  view_camera_poses.cc  view_camera_poses_from_colmap_result.cc  view_reconstruction.cc  visualize_matchfile_content.cc
include/theia/: theia.h
python_scripts/: DeMoN_Predict_DB.py  DeMoN_Predict_DB_ExhaustivePairs.py  DeMoN_Predict_DB_ExhaustivePairs_JohanFreiburg.py  DeMoN_Predict_DB_ExhaustivePairs_JohanFreiburg_cleaned.py  DeMoN_Predict_DB_ExhaustivePairs_KevinFormatDB.py  DeMoN_Predict_DB_JohanFreiburg.py  DeMoN_Predict_DB_JohanFreiburg_minusTrans.py  DeMoN_Predict_DB_JohanFreiburg_test.py  DeMoN_Predict_DB_JohanFreiburg_transposeR.py  DeMoN_Predict_DB_transposeR.py  DeMoN_prediction_Rt_symetric_checking.py  Generate_Reliable_Single_data4Fusion_Depth_DeMoN_Predict_DB.py  Generate_Reliable_Single_data4Fusion_Depth_DeMoN_Predict_DB_JohanFreiburg.py  RTranspose_DeMoN_Predict_DB.py  RTranspose_DeMoN_Predict_DB_JohanFreiburg.py  ReadImagesFromColmapDatabase_K.py  compare_DeMoN_Prediction_relative_poses_with_ground_truth.py  compare_DeMoN_Prediction_relative_poses_with_theia_input.py  compare_colmap_result_relative_poses_with_global_poses.py  compare_theia_result_relative_poses_with_ground_truth.py  compare_theia_result_relative_poses_with_theia_input_matches.py  config3_theia_colmap_transformation_system_check_JohanFreiburg.py  config4_v1_RTranspose_DeMoN_Predict_DB_JohanFreiburg.py  eulerAngles.py  import_database_K.py  import_database_withRt_K.py  import_demon_data.py  import_demon_data_RecoverR.py  import_demon_data_RecoverR_withColmapGT.py  import_demon_data_RecoverR_withColmapGT_photometric.py  import_demon_data_RecoverR_withColmapGT_photometric_reverse21.py  import_demon_data_withRt.py  python_check_hdf5_file.py  test.py  theia_colmap_transformation_system_check.py  theia_colmap_transformation_system_check_JohanFreiburg.py
src/theia/: CMakeLists.txt
src/theia/image/: image.cc  image.h
src/theia/io/: write_calibration.cc  write_calibration.h  write_matches.cc  write_matches.h
src/theia/sfm/: estimate_twoview_info.cc  global_reconstruction_estimator.cc  global_reconstruction_estimator.cc.bak  global_reconstruction_estimator.h  reconstruction_builder.cc  reconstruction_builder.h  twoview_info.h
src/theia/sfm/bundle_adjustment/: bundle_adjustment.h
src/theia/solvers/: lmed_quality_measurement.h
